[package]
name = "maccoys-exchange-entities"
version = "0.1.0"
edition = "2021"
authors = [
    "Dirk Winkelhardt <dirk.winkelhardt@rub.de>",
    "Julian Uszkoreit <julian.uszkoreit@rub.de>",
] 
description = "Entities for exchanging MaCcoyS exchanges between web API and a client."
repository = "https://github.com/medbioinf/maccoys-exchange-entities"
homepage = "https://github.com/medbioinf/maccoys-exchange-entities"
documentation = "https://github.com/medbioinf/maccoys-exchange-entities"
license-file = "../LICENSE"

[dependencies]
anyhow = "1.0.89"
itertools = "0.13.0"
polars = { version = "0.35.4", default-features = false, features = ["serde", "json"] } # Features are very limited to make it run in WASM
serde = "1.0.189"
serde_json = "1.0.107"
